# MASA-OpenMP

./: README.md
masa-openmp-1.0.1.1024/: Makefile.am  Makefile.in  README  configure  configure.ac
masa-openmp-1.0.1.1024/src/: OpenMPAligner.cpp  OpenMPAligner.hpp  OpenMPAlignerParameters.cpp  OpenMPAlignerParameters.hpp  config.h.in  main.cpp
